--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "web-dev-server --node-resolve --open --watch"
+    "start": "web-dev-server --node-resolve --open --watch",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "npm run build && vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@web/dev-server": "^0.1.34"
+    "@web/dev-server": "^0.1.34",
+    "vite": "^3.1.4"
   },
   "dependencies": {
     "@vaadin/router": "^1.7.4",
