--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "web-dev-server --node-resolve --open --watch",
     "dev": "vite",
     "build": "vite build",
+    "host": "vite --host",
     "preview": "npm run build && vite preview"
   },
   "keywords": [],
